--- a/current/modlist.html
+++ b/current/modlist.html
@@ -17,6 +17,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-lite">Avaritia Lite (by bullfighter2009)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-customization">Mystical Customization (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks">Sophisticated Backpacks (by P3pp3rF1y)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/obfuscate">Obfuscate (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/u-team-core">U Team Core (by HyCraftHD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/client-tweaks">Client Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorph">Polymorph (Forge) (by TheIllusiveC4)</a></li>
@@ -44,6 +45,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/atlantis">Atlantis (by mysticpasta1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/occultism">Occultism (by kli_kli)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ae-additions-extra-cells-2-fork">AE Additions - ExtraCells2 Fork (by MasterYodAT9G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclic">Cyclic (by Lothrazar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/top-addons">TOP Addons (by DrManganese)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-arsenal">Redstone Arsenal (by TeamCoFH)</a></li>
@@ -119,8 +121,10 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/shutup-experimental-settings">Shutup Experimental Settings! (by Corgi_Taco)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-one-probe">The One Probe (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-effect-descriptions-jeed">Just Enough Effect Descriptions (JEED) (by MehVahdJukaar)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/lazierae2">Lazier AE2 (by DamnRelentless)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spice-of-life-carrot-edition">Spice of Life: Carrot Edition (by lordcazsius)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/silent-lib">Silent Lib (silentlib) (by SilentChaos512)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/decorative-blocks">Decorative Blocks (by stohun)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks-elevator">OpenBlocks Elevator (by vsngarcia)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-villagers">Easy Villagers (by henkelmax)</a></li>
@@ -164,7 +168,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/powah">Powah! (by owmii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create">Create (by simibubi)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/compact-machines">Compact Machines (by davenonymous)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/architectury-api">Architectury API (Fabric/Forge) (by shedaniel)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mod-name-tooltip">Mod Name Tooltip (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-tech">Environmental Tech (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-core">Project Red - Core (by MrTJP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-adaptations">Mystical Adaptations (by Focamacho)</a></li>
@@ -204,12 +210,14 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-stuff-additions">Create Stuff Additions (by Furti_Two)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-professions-jep">Just Enough Professions (JEP) (by Mrbysco)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/oreconfig">Ore Config (by noahc3)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mana-gear">Mana Gear (by Partonetrain)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supplementaries">Supplementaries (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-expansion">Thermal Expansion (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/scorge">Scorge (by illyohs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-chunks-forge">FTB Chunks (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/croptopia">Croptopia (by thethonk)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/silent-gear">Silent Gear (by SilentChaos512)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/framed-compacting-drawers">Framed Compacting Drawers (by Eutropium)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/placebo">Placebo (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-deco">Create Deco (by talrey)</a></li>
@@ -217,6 +225,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/connectivity">Connectivity[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/metal-barrels">Metal Barrels (by tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/zerocore">ZeroCore 2 (by ZeroNoRyouki)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/hardcore-questing-mode">Hardcore Questing Mode [FORGE/FABRIC] (by LordDusk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-fauna">Prehistoric Fauna (by superlord_9362)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/runelic">Runelic (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cctv-craft">CCTV Craft (by NorthWestTreesGaming)</a></li>
