--- a/client/current/modlist.html
+++ b/client/current/modlist.html
@@ -232,6 +232,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/runelic">Runelic (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cctv-craft">CCTV Craft (by NorthWestTreesGaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/moving-elevators">Moving Elevators (by SuperMartijn642)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/worldedit">WorldEdit (by sk89q)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-crates">Better Crates (by TheTestMod)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/engineers-decor">Engineer's Decor (by wilechaote)</a></li>
