--- a/server/current/modlist.html
+++ b/server/current/modlist.html
@@ -5,6 +5,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-supercharged">Create Supercharged (by phicctv)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flux-networks">Flux Networks (by sonar_sonic)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/reliquary-v1-3">Reliquary Reincarnations (by P3pp3rF1y)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/performant">Performant (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ding">Ding (by ohaiiChun)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/additional-lanterns">Additional Lanterns (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-integration">Project Red - Integration (by MrTJP)</a></li>
@@ -18,6 +19,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks">Sophisticated Backpacks (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/obfuscate">Obfuscate (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/u-team-core">U Team Core (by HyCraftHD)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/client-tweaks">Client Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorph">Polymorph (Forge) (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mantle">Mantle (by mDiyo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/apotheosis">Apotheosis (by Shadows_of_Fire)</a></li>
@@ -42,6 +44,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/atlantis">Atlantis (by mysticpasta1)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/observable">Observable (by tasgon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/occultism">Occultism (by kli_kli)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae-additions-extra-cells-2-fork">AE Additions - ExtraCells2 Fork (by MasterYodAT9G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclic">Cyclic (by Lothrazar)</a></li>
@@ -110,6 +113,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-storage-1-8">Ender Storage 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-control">RFTools Control (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/entangled">Entangled (by SuperMartijn642)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-voice-chat">Simple Voice Chat (by henkelmax)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/lollipop">Lollipop (by owmii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-mounted-storages">More Mounted Storages (by juh9870)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-bumblezone-forge">The Bumblezone (Forge) (by telepathicgrunt)</a></li>
@@ -177,6 +181,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nomadic-tents">Nomadic Tents (by skyjay1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fast-leaf-decay">Fast Leaf Decay (by olafskiii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-weirding-gadget">The Weirding Gadget (by AtomicBlom)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-chests">Iron Chests (by ProgWML6)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-mekanism">KubeJS Mekanism (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farmers-delight-compats">Farmer's Delight Compats (by burritoeatinghamster)</a></li>
