add 2 mods and add default world configs

--- a/client/current/modlist.html
+++ b/client/current/modlist.html
@@ -200,6 +200,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gaia-dimension">Gaia Dimension (by Squiggly_Androsa)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-magnets">Simple Magnets (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botany-pots">Botany Pots (by DarkhaxDev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/refined-pipes">Refined Pipes (by raoulvdberge)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crash-utilities">Crash Utilities (by Darkere)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/createtweaker">CreateTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-roofs-oh-the-biomes-youll-go">Macaw's Roofs - Oh The Biomes You'll Go (by Samlegamer_)</a></li>
@@ -231,6 +232,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-fauna">Prehistoric Fauna (by superlord_9362)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/runelic">Runelic (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cctv-craft">CCTV Craft (by NorthWestTreesGaming)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/project-intelligence">Project Intelligence (by brandon3055)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/moving-elevators">Moving Elevators (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-crates">Better Crates (by TheTestMod)</a></li>
