--- a/client/current/modlist.html
+++ b/client/current/modlist.html
@@ -5,6 +5,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-supercharged">Create Supercharged (by phicctv)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flux-networks">Flux Networks (by sonar_sonic)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/reliquary-v1-3">Reliquary Reincarnations (by P3pp3rF1y)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/xnet-gases">XNet Gases (by Terrails)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ding">Ding (by ohaiiChun)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/additional-lanterns">Additional Lanterns (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-integration">Project Red - Integration (by MrTJP)</a></li>
@@ -77,6 +78,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-storage">RFTools Storage (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cb-multipart">CB Multipart (by covers1624)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/curious-jetpacks">Curious Jetpacks (by tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-cultivation">Thermal Cultivation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-compass">Nature's Compass (by Chaosyr)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-storage-network">Simple Storage Network (by Lothrazar)</a></li>
@@ -134,6 +136,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-core">Environmental Core (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/betterf3">BetterF3 (by cominixo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-fences-oh-the-biomes-youll-go">Macaw's Fences - Oh The Biomes You'll Go (by Samlegamer_)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/xnet">XNet (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/decorative-blocks-modded-compat">Decorative Blocks modded compat (by Evo_934)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blockcarpentry">BlockCarpentry (by PianoManu)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
@@ -150,7 +153,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chisel">Chisel (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/configured">Configured (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rubidium">Rubidium (by Asek3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/observerlib">ObserverLib (by HellFirePvP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-engineering">Immersive Engineering (by BluSunrize)</a></li>
@@ -200,8 +202,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gaia-dimension">Gaia Dimension (by Squiggly_Androsa)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-magnets">Simple Magnets (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botany-pots">Botany Pots (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/refined-pipes">Refined Pipes (by raoulvdberge)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crash-utilities">Crash Utilities (by Darkere)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/refined-pipes">Refined Pipes (by raoulvdberge)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/createtweaker">CreateTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-roofs-oh-the-biomes-youll-go">Macaw's Roofs - Oh The Biomes You'll Go (by Samlegamer_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-mechworks">Tinkers' Mechworks (by mDiyo)</a></li>
@@ -214,6 +216,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-professions-jep">Just Enough Professions (JEP) (by Mrbysco)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/oreconfig">Ore Config (by noahc3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mana-gear">Mana Gear (by Partonetrain)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/beyond-earth">Beyond Earth (Forge) (by mrscauthd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supplementaries">Supplementaries (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-expansion">Thermal Expansion (by TeamCoFH)</a></li>
