--- a/client/current/modlist.html
+++ b/client/current/modlist.html
@@ -222,8 +222,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supplementaries">Supplementaries (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-expansion">Thermal Expansion (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-chunks-forge">FTB Chunks (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/scorge">Scorge (by illyohs)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-chunks-forge">FTB Chunks (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/croptopia">Croptopia (by thethonk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/silent-gear">Silent Gear (by SilentChaos512)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/framed-compacting-drawers">Framed Compacting Drawers (by Eutropium)</a></li>
@@ -238,6 +238,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/runelic">Runelic (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cctv-craft">CCTV Craft (by NorthWestTreesGaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-intelligence">Project Intelligence (by brandon3055)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/jaopca">JAOPCA (by TheLMiffy1111)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/moving-elevators">Moving Elevators (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/maessentials">Ma Essentials (by Maciej916)</a></li>
