--- a/client/current/modlist.html
+++ b/client/current/modlist.html
@@ -14,9 +14,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing-tweaker">Industrial Foregoing Tweaker (by mrthomas20121)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-red-exploration">Project Red - Exploration (by MrTJP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-undergarden">The Undergarden (by Quek04)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extreme-reactors">Extreme Reactors (by ZeroNoRyouki)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-lite">Avaritia Lite (by bullfighter2009)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-customization">Mystical Customization (by BlakeBr0)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/biggerreactors">Bigger Reactors (by RogueLogix)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-backpacks">Sophisticated Backpacks (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/obfuscate">Obfuscate (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/u-team-core">U Team Core (by HyCraftHD)</a></li>
@@ -33,6 +33,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ignition-hydrogel">Ignition: HydroGel (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create-confectionery">Create Confectionery (by Furti_Two)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/common-capabilities">Common Capabilities (by kroeser)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/autoreglib">AutoRegLib (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker">CraftTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/brandons-core">Brandon's Core (by brandon3055)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/custom-machinery">Custom Machinery (by frinn38)</a></li>
@@ -45,7 +46,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/atlantis">Atlantis (by mysticpasta1)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/trash-cans">Trash Cans (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/occultism">Occultism (by kli_kli)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/additional-enchanted-miner">Additional Enchanted Miner (by Kotori316)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae-additions-extra-cells-2-fork">AE Additions - ExtraCells2 Fork (by MasterYodAT9G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclic">Cyclic (by Lothrazar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/top-addons">TOP Addons (by DrManganese)</a></li>
@@ -68,12 +71,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/allthemodium">Allthemodium (by ATMTeam)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/warped-book">Warped Book (by Amidaes)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/baubley-heart-canisters">Baubley Heart Canisters (by traverse_joe)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/scalable-cats-force">Scalable Cat's Force (by Kotori316)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ffs-fancy-fluid-storage">FFS - Fancy Fluid Storage (by Lordmau5)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-construct">Tinkers Construct (by mDiyo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/productivebees">Productive Bees (by LobsterJonn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/libx">LibX (by noeppinoeppi)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pneumaticcraft-repressurized">PneumaticCraft: Repressurized (by desht_08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/akashic-tome">Akashic Tome (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-locomotion">Thermal Locomotion (by TeamCoFH)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/phosphophyllite">Phosphophyllite (by RogueLogix)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-mekanism-processing">More Mekanism Processing (by 지젤쟝다)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-storage">RFTools Storage (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
@@ -153,6 +159,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chisel">Chisel (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/configured">Configured (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rubidium">Rubidium (by Asek3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/observerlib">ObserverLib (by HellFirePvP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-engineering">Immersive Engineering (by BluSunrize)</a></li>
@@ -168,7 +175,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/structures-compass">Structures' Compass (by Samarium_150)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spark">spark (by Iucko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/construction-wand">Construction Wand (by ThetaDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-dimensions">RFTools Dimensions (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/powah">Powah! (by owmii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/create">Create (by simibubi)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
@@ -212,9 +218,10 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-base">RFTools Base (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/journeymap">JourneyMap (by techbrew)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/vending-tile">Vending Tile (by tfarecnim)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/create-stuff-additions">Create Stuff Additions (by Furti_Two)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/create-stuff-additions">Create Stuff & Additions (by Furti_Two)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-professions-jep">Just Enough Professions (JEP) (by Mrbysco)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/oreconfig">Ore Config (by noahc3)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/trashslot">TrashSlot (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mana-gear">Mana Gear (by Partonetrain)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/beyond-earth">Beyond Earth (Forge) (by mrscauthd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
@@ -230,14 +237,16 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/comforts">Comforts (Forge) (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/connectivity">Connectivity[Forge/Fabric] (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/metal-barrels">Metal Barrels (by tfarecnim)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/zerocore">ZeroCore 2 (by ZeroNoRyouki)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hardcore-questing-mode">Hardcore Questing Mode [FORGE/FABRIC] (by LordDusk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prehistoric-fauna">Prehistoric Fauna (by superlord_9362)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/runelic">Runelic (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cctv-craft">CCTV Craft (by NorthWestTreesGaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-intelligence">Project Intelligence (by brandon3055)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/jaopca">JAOPCA (by TheLMiffy1111)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/moving-elevators">Moving Elevators (by SuperMartijn642)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/worldedit">WorldEdit (by sk89q)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/maessentials">Ma Essentials (by Maciej916)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-crates">Better Crates (by TheTestMod)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/engineers-decor">Engineer's Decor (by wilechaote)</a></li>
 </ul>
